# android-zig-raylib

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/zigandroidexample/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/zig/: CMakeLists.txt  build.zig
app/src/main/cpp/zig/src/: root.zig
app/src/main/java/com/example/zigandroidexample/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/zigandroidexample/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
